# kudi

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: check.yml  test.yml
kudi-cli/: Cargo.toml
kudi-cli/src/: main.rs
kudi-cli/src/parse/: ast.rs  isomorph.rs  mod.rs
kudi-macros/: Cargo.toml
kudi-macros/src/: target.rs  utils.rs
tests/: generics.rs  stateful.rs  stateless.rs
