[workspace]
members = [".", "kudi-macros"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[package]
name = "kudi"
version = "0.1.0"
edition = { workspace = true }
description = "Compile Time Interface-Oriented Dependency Injection"
readme = "README.md"
repository = "https://github.com/kudi-rs/kudi"
documentation = "https://docs.rs/kudi"
license = "MIT"
categories = ["rust-patterns"]
keywords = ["ioc", "dependency-injection", "di"]
include = ["src/**/*", "tests/**/*", "Cargo.toml", "LICENSE*", "README.md"]

[dependencies]
kudi-macros = { version = "0.1.0", path = "kudi-macros" }
